# SimpleImGuiFlameGraph

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_debug.bat  build_release.bat  fire_graph_drawer.cpp  fire_graph_drawer.h  flame_graph_drawer.cpp  flame_graph_drawer.h  scope_time_data.h  timer.h
example/: CMakeLists.txt  main.cpp
